--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fascinate|Roboto:300,400,500,700&display=swap" />
-    <title>Test login nyan app</title>
+    <title>Test login app</title>
   </head>
   <body>
     <div id="root"></div>
